--- a/index.html
+++ b/index.html
@@ -4,6 +4,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Joe's Portfolio</title>
+    <style>
+        body {
+            background-color: antiquewhite;
+        }
+
+        h1 {
+            color: whitesmoke;
+            background-color: darkseagreen;
+        }
+
+        h2 {
+            color: whitesmoke;
+            background-color: #c58940;
+        }
+    </style>
 </head>
 
 <body>
