--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Joe's Portfolio</title>
+    <title>Joe's Portfolio 1 </title>
     <style>
         body {
             background-color: antiquewhite;
